# libcapture

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shields.json
.github/workflows/: build.yml  linux_build.yml  macos_build.yml  windows_build.yml
cmake/: FindFFmpeg.cmake
docs/html/: annotated.html  classes.html  dir_24c049936c2e162b277227e4c6675044.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_33eff72d368e09fa9f58259b8a9511dc.html  dir_49777ccd8b1c17fde88f440c7e602b0d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_88dada6f0de8a394c3907f223196feb8.html  dir_c0cd66d8ddae4fc5bc5dc2f24e29763b.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fdedb0aba14d44ce9d99bc100e026e6a.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  globals_func.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  pages.html
docs/html/d0/d30/: md_README.html
docs/html/d0/d3b/: classEncoder.html  duration__logger_8h.html  duration__logger_8h_source.html
docs/html/d0/daf/: muxer_8cpp.html  muxer_8cpp_source.html
docs/html/d0/dd9/: classCapturer-members.html
docs/html/d0/de8/: classEncoder-members.html
docs/html/d0/df8/: structDeleterP-members.html
docs/html/d1/d79/: encoder_8h.html  encoder_8h_source.html
docs/html/d1/dc8/: classThreadGuard-members.html
docs/html/d1/dcd/: classDurationLogger.html
docs/html/d2/d44/: classScreenRecorder.html
docs/html/d3/d24/: capturer_8cpp.html  capturer_8cpp_source.html
docs/html/d3/d9f/: screen__recorder_8h_source.html
docs/html/d4/d47/: structDeleterP.html
docs/html/d4/d71/: pipeline_8cpp.html  pipeline_8cpp_source.html
docs/html/d5/d17/: classConverter.html
docs/html/d5/d58/: classScopedThread-members.html
docs/html/d5/d60/: classLogLevelSetter.html
docs/html/d6/d2d/: decoder_8cpp.html  decoder_8cpp_source.html
docs/html/search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+26 more)
docs/latex/: annotated.tex  dir_24c049936c2e162b277227e4c6675044.tex  dir_313caf1132e152dd9b58bea13a4052ca.tex  dir_33eff72d368e09fa9f58259b8a9511dc.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_88dada6f0de8a394c3907f223196feb8.tex  dir_c0cd66d8ddae4fc5bc5dc2f24e29763b.tex  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_fdedb0aba14d44ce9d99bc100e026e6a.tex  files.tex  index.tex  namespaces.tex  refman.tex
example/: CMakeLists.txt  console_setter.h  recorder.cpp  thread_guard.h
include/: ScreenRecorder.h  audio_converter.h  audio_encoder.h  common.h  converter.h  decoder.h  deleter.h  deleters.h  demuxer.h  duration_logger.h  encoder.h  exceptions.h  ffmpeg_libs.h  input_container.h  muxer.h  output_container.h  packet.h  pipeline.h  screen_recorder.h  video_converter.h  video_dimensions.h  video_encoder.h  video_parameters.h
include/libavutil/: ffversion.h
include/libcapture/: capturer.h  video_parameters.h
include/screen-recorder/: screen_recorder.h  video_parameters.h
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
screen-recorder/: CMakeLists.txt  audio_converter.cpp  audio_encoder.cpp  decoder.cpp  demuxer.cpp  encoder.cpp  main.cpp  muxer.cpp  screen_recorder.cpp  video_converter.cpp  video_encoder.cpp
screen-recorder-ffmpeg-cpp-master/: .clang-format  CMakeLists.txt  compile.sh
screen-recorder-ffmpeg-cpp-master/include/: ScreenRecorder.h
screen-recorder-ffmpeg-cpp-master/src/: ScreenRecorder.cpp  ScreenRecorder2.cpp  main.cpp
screen-recorder/include/: screen_recorder.h
screen-recorder/include/screen-recorder/: video_parameters.h
screen-recorder/src/common/: common.h
screen-recorder/src/convert/: audio_converter.h  converter.h  video_converter.h
screen-recorder/src/decode/: decoder.cpp  decoder.h
screen-recorder/src/encode/: audio_encoder.h  encoder.h  video_encoder.h
screen-recorder/src/format/: demuxer.h  muxer.h
screen-recorder/src/process/: pipeline.h
screen-recorder/src/recorder/: screen_recorder.cpp
screen-recorder/src/utils/: duration_logger.h  log_callback_setter.h  log_level_setter.h  scoped_thread.h
src/: ScreenRecorder.cpp  audio_converter.cpp  audio_encoder.cpp  common.h  converter.cpp  decoder.cpp  demuxer.cpp  duration_logger.h  encoder.cpp  encoder.h  input_container.cpp  log_callback_setter.h  log_level_setter.h  main.cpp  muxer.cpp  muxer.h  output_container.cpp  pipeline.cpp  scoped_thread.h  screen_recorder.cpp  thread_guard.h  video_converter.cpp  video_encoder.cpp
src/capture/: capture.cpp  capturer.cpp  screen_recorder.cpp
src/common/: common.h
src/convert/: audio_converter.cpp  audio_converter.h  converter.cpp  converter.h  video_converter.cpp  video_converter.h
src/decode/: decoder.cpp  decoder.h
src/encode/: audio_encoder.cpp  audio_encoder.h  encoder.cpp  encoder.h  video_encoder.cpp  video_encoder.h
src/format/: demuxer.cpp  demuxer.h  muxer.cpp  muxer.h
src/include/: audio_converter.h  common.h  decoder.h  deleter.h  demuxer.h  duration_logger.h  encoder.h  screen_recorder.h  video_converter.h
src/pipeline/: pipeline.cpp  pipeline.h
src/process/: converter.cpp  converter.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  pipeline.cpp  pipeline.h
src/recorder/: screen_recorder.cpp
src/utils/: log_callback_setter.h  log_level_setter.h  scoped_thread.h  thread_guard.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
(+127 files in other folders)
